<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	
	<PreferenceCategory android:title="@string/pref_header_general">
		<SwitchPreferenceCompat
			android:defaultValue="false"
			android:icon="@drawable/ic_puzzle"
			android:key="@string/pref_key_editor"
			android:summary="@string/pref_description_god_mode"
			android:title="@string/pref_title_god_mode" />
		
		<Preference
			android:icon="@drawable/ic_baseline_backup_table_24"
			android:key="@string/pref_key_backup"
			android:summary="@string/pref_description_backup"
			android:title="@string/pref_title_backup" />
		
		<Preference
			android:icon="@drawable/ic_baseline_settings_backup_restore_24"
			android:key="@string/pref_key_restore"
			android:summary="@string/pref_description_restore"
			android:title="@string/pref_title_restore" />
	</PreferenceCategory>
	
	<PreferenceCategory android:title="@string/pref_header_support">
		
		<Preference
			android:icon="@drawable/ic_people"
			android:key="@string/pref_key_join_group"
			android:summary="@string/pref_description_add_group"
			android:title="@string/pref_title_add_group" />
		
		<Preference
			android:icon="@drawable/ic_donate"
			android:key="@string/pref_key_donate"
			android:summary="@string/pref_description_donate_me"
			android:title="@string/pref_title_donate_me" />
	
	</PreferenceCategory>
	
	<PreferenceCategory
		android:key="@string/pref_key_app_rules"
		android:title="@string/pref_header_app_rules">
	
	</PreferenceCategory>

</PreferenceScreen>
